# calendar-agent-ia

./: .gitignore  README.md  langgraph.json  messenger.py  pyproject.toml
app/: app.py  calendar_agent.py
app/src/functions/: calendar.py
app/src/graph/: nodes.py  workflow.py
app/src/models/: calendar_input.py  calendar_output.py
app/src/prompts/: calendar.py  calendar_assistant.py
app/src/schemas/: calendar.py
app/src/tools/: calendar.py
app/src/utils/: audio_recorder.py  calendar_service.py
crew/: agent.py
crew/graph/: nodes.py
crew/prompts/: calendar_assistant.py  user_input.py
crew/tools/: __init__.py  functions.py  models.py
crew/utils/: audio.py  calendar_service.py
